# learnCmake

./: CMakeLists.txt  Readme.md  myLib.cpp
app/: main.cpp
src/lib/: CMakeLists.txt  myLib.h
